--- a/app/src/main/res/layout/item_after_delivery.xml
+++ b/app/src/main/res/layout/item_after_delivery.xml
@@ -12,30 +12,45 @@
     <com.zhaopin.common.widget.RCConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="12dp"
-        android:paddingVertical="16dp"
+        android:paddingEnd="12dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="10dp"
         android:background="@color/C_W1"
         app:layout_radius="10dp">
 
         <!-- 选择按钮 -->
-        <ImageView
-            android:id="@+id/iv_check"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/drawable_after_delivery_check_state"
+        <FrameLayout
+            android:id="@+id/fl_check"
+            android:layout_width="48dp"
+            android:layout_height="0dp"
+            android:clickable="true"
+            android:focusable="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageView
+                android:id="@+id/iv_check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="20dp"
+                android:layout_gravity="center"
+                android:src="@drawable/drawable_after_delivery_check_state"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </FrameLayout>
 
         <!-- 职位名/薪资 -->
         <LinearLayout
             android:id="@+id/ll_job_salary"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            app:layout_constraintStart_toEndOf="@id/iv_check"
+            app:layout_constraintStart_toEndOf="@id/fl_check"
             app:layout_constraintEnd_toEndOf="parent">
 
             <TableLayout
@@ -97,8 +112,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="12dp"
-            app:layout_constraintStart_toEndOf="@id/iv_check"
+            app:layout_constraintStart_toEndOf="@id/fl_check"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ll_job_salary">
 
@@ -106,6 +120,7 @@
                 android:id="@+id/tv_company_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="6dp"
                 android:maxLines="1"
                 android:textSize="14sp"
                 android:textColor="@color/C_B2"
@@ -115,7 +130,7 @@
                 android:id="@+id/tv_company_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginEnd="6dp"
                 android:maxLines="1"
                 android:textSize="14sp"
                 android:textColor="@color/C_B2"
@@ -125,7 +140,6 @@
                 android:id="@+id/tv_company_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
                 android:maxLines="1"
                 android:textSize="14sp"
                 android:textColor="@color/C_B2"
@@ -139,69 +153,57 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="12dp"
             android:focusable="false"
-            app:layout_constraintStart_toEndOf="@id/iv_check"
+            app:layout_constraintStart_toEndOf="@id/fl_check"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ll_company_info"
+            app:max_lines="1"
             app:max_select="-1" />
 
         <!-- HR信息 -->
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_hr"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="12dp"
-            app:layout_constraintStart_toEndOf="@id/iv_check"
+            app:layout_constraintStart_toEndOf="@id/fl_check"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/layout_skill_flow">
 
             <com.zhaopin.common.widget.ZLCircleImageView
                 android:id="@+id/iv_avatar"
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 tools:src="@drawable/c_common_icon_hr_new_default"/>
 
-            <ImageView
-                android:id="@+id/iv_online"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:layout_marginTop="18dp"
-                android:layout_marginStart="18dp"
-                app:layout_constraintTop_toTopOf="@id/iv_avatar"
-                app:layout_constraintStart_toStartOf="parent"
-                android:src="@drawable/ic_hr_online"
-                android:visibility="gone"
-                tools:visibility="visible"/>
-
             <TextView
                 android:id="@+id/tv_hr_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
+                android:layout_marginStart="8dp"
                 android:textSize="12sp"
                 android:textColor="@color/C_B2"
                 app:layout_constraintTop_toTopOf="@id/iv_avatar"
                 app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
                 app:layout_constraintStart_toEndOf="@id/iv_avatar"
-                tools:text="李女士"/>
-
-            <TextView
-                android:id="@+id/tv_hr_job"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:textSize="12sp"
-                android:textColor="@color/C_B2"
-                app:layout_constraintStart_toEndOf="@id/tv_hr_name"
-                app:layout_constraintTop_toTopOf="@id/iv_avatar"
-                app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
-                tools:text=" 资深招聘经理"/>
+                tools:text="李女士.资深招聘经理"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageView
+            android:id="@+id/iv_online"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginStart="14dp"
+            app:layout_constraintTop_toTopOf="@id/cl_hr"
+            app:layout_constraintStart_toStartOf="@id/cl_hr"
+            android:src="@drawable/ic_hr_online"
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
 
     </com.zhaopin.common.widget.RCConstraintLayout>
