--- a/app/src/main/res/layout/activity_appbar.xml
+++ b/app/src/main/res/layout/activity_appbar.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="30dp"
+    android:background="@color/C_S2"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <!--    <com.example.kotlindemo.task.appbar.CampusAppBar-->
@@ -30,6 +31,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
+        android:id="@+id/ll_span"
         android:layout_width="0dp"
         android:layout_height="200dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +45,33 @@
             android:maxLines="2"
             android:ellipsize="end"
             android:text="荣耀V40轻奢版 5G 超级快充 6400万超清四摄 8GB+128GB钛空银 " />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:background="@color/C_W1"
+        app:layout_constraintTop_toBottomOf="@id/ll_span">
+
+        <com.example.kotlindemo.task.appbar.CampusHomeFilterListView
+            android:id="@+id/v_filter_list"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:layout_marginEnd="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="城市"
+            android:layout_marginEnd="20dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="筛选"/>
 
     </LinearLayout>
 
